# cam_server

./: .gitignore  DEVLOG.md  DEV_ENVIRONMENT.md  DEV_PLATFORM.md  README.md  require.md  setup_rk3588_dev.sh
camera-server/: Cargo.toml
camera-server/camera-api/: Cargo.toml
camera-server/camera-api/src/: error.rs  lib.rs
camera-server/camera-app/: Cargo.toml
camera-server/camera-app/src/: app.rs  cli.rs  config.rs  main.rs
camera-server/camera-core/: Cargo.toml
camera-server/camera-core/src/: camera.rs  config.rs  error.rs  lib.rs  video.rs
camera-server/camera-monitor/: Cargo.toml
camera-server/camera-monitor/src/: error.rs  lib.rs  logger.rs  service.rs  system.rs
camera-server/camera-storage/: Cargo.toml
camera-server/camera-storage/src/: disk.rs  error.rs  file_manager.rs  frame_manager.rs  lib.rs  package.rs
camera-server/web-client/: index.html
camera-server/web-client/css/: style.css
camera-server/web-client/js/: api.js  app.js  ui.js
tools/camera_capture_test/: Cargo.toml
tools/camera_capture_test/src/: main.rs
tools/camera_detector/: Cargo.toml
tools/camera_detector/src/: main.rs
tools/jpeg_capture_test/: Cargo.toml
tools/jpeg_capture_test/src/: main.rs
tools/video_record_test/: Cargo.toml
tools/video_record_test/src/: main.rs
tools/video_record_test/video_test_output/: README.txt
