[workspace]
members = [
    "camera-core",
    "camera-api",
    "camera-storage",
    "camera-monitor",
    "camera-app",
]

[workspace.dependencies]
# 通用依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
tokio = { version = "1.28", features = ["full"] }

# 特定依赖
v4l = "0.14"
ffmpeg-next = "6.0"
image = "0.24"
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
walkdir = "2.3"
zip = "0.6"
sysinfo = "0.29"
clap = { version = "4.3", features = ["derive"] }