[package]
name = "camera-app"
version = "0.1.0"
edition = "2021"
description = "摄像头服务器主应用"

[dependencies]
# 从工作空间继承
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

# 内部依赖
camera-core = { path = "../camera-core" }
camera-api = { path = "../camera-api" }
camera-storage = { path = "../camera-storage" }
camera-monitor = { path = "../camera-monitor" }
