[package]
name = "camera-core"
version = "0.1.0"
edition = "2021"
description = "摄像头采集和视频处理核心功能"

[dependencies]
# 从工作空间继承
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# 特定依赖
# 暂时注释掉ffmpeg-next，因为与系统FFmpeg版本不兼容
# ffmpeg-next = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# 平台特定依赖
[target.'cfg(target_os = "linux")'.dependencies]
v4l = { workspace = true }
nokhwa = { workspace = true, features = ["input-v4l"] }

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { workspace = true, features = ["input-avfoundation"] }