[package]
name = "camera-storage"
version = "0.1.0"
edition = "2021"
description = "存储管理功能"

[dependencies]
# 从工作空间继承
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

# 内部依赖
camera-core = { path = "../camera-core" }
