[package]
name = "camera_capture_test"
version = "0.1.0"
edition = "2021"

[dependencies]
camera-core = { path = "../../camera-server/camera-core" }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
image = "0.24"

# 平台特定依赖
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
